--- a/LoanInterestCalculatorTest/LoanInterestCalculatorTest.csproj
+++ b/LoanInterestCalculatorTest/LoanInterestCalculatorTest.csproj
@@ -59,9 +59,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="LoanTest.cs" />
+    <Compile Include="TestLoan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="LoanHelperTest.cs" />
+    <Compile Include="TestLoanHelper.cs" />
+    <Compile Include="TestFileLoanOutput.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LoanInterestCalculator\LoanInterestCalculator.csproj">
