Added code and tests for one time payment functionality.

--- a/LoanInterestCalculator/LoanInterestCalculator.csproj
+++ b/LoanInterestCalculator/LoanInterestCalculator.csproj
@@ -46,7 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MonthlyPayments.cs" />
+    <Compile Include="OneTimePayment.cs" />
     <Compile Include="AmortizationItem.cs" />
+    <Compile Include="AdditionalPayment.cs" />
     <Compile Include="Loan.cs" />
     <Compile Include="LoanHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
