--- a/LoanInterestCalculatorTest/LoanInterestCalculatorTest.csproj
+++ b/LoanInterestCalculatorTest/LoanInterestCalculatorTest.csproj
@@ -62,6 +62,7 @@
     <Compile Include="LoanTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LoanHelperTest.cs" />
+    <Compile Include="LoansTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LoanInterestCalculator\LoanInterestCalculator.csproj">
